--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/AlexMaster001/hexlet-js/issues"
   },
-  "homepage": "https://github.com/AlexMaster001/hexlet-js#readme"
+  "homepage": "https://github.com/AlexMaster001/hexlet-js#readme",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {}
 }
